Add snapshot harness support for capturing and loading RNG state; implement methods to dump MersenneTwister and Math.random seed states